--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
-        name: Checkout
-        uses: actions/checkout@v3
+        name: Get current time
+        uses: josStorer/get-current-time@v2
+        id: current
+        with:
+          format: YYMMDD.HHmmss
+          utcOffset: "+08:00"
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       -
         name: Login to TCR
         uses: docker/login-action@v2
@@ -21,13 +28,6 @@ jobs:
           registry: ccr.ccs.tencentyun.com
           username: ${{ secrets.TCR_USERNAME }}
           password: ${{ secrets.TCR_PASSWORD }}
-      -
-        name: Get current time
-        uses: josStorer/get-current-time@v2
-        id: current
-        with:
-          format: YYMMDD.HHmmss
-          utcOffset: "+08:00"
       -
         name: Build and push Docker images
         uses: docker/build-push-action@v3.1.1
