--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,6 @@ jobs:
           format: YYMMDD.HHmmss
           utcOffset: "+08:00"
       -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
         name: Login to TCR
         uses: docker/login-action@v2
         with:
@@ -36,4 +33,4 @@ jobs:
         uses: docker/build-push-action@v3.1.1
         with:
           push: true
-          tags: ccr.ccs.tencentyun.com/khl.py/whosyou:${{steps.current.outputs.formattedTime}}
+          tags: ccr.ccs.tencentyun.com/khl.py/whosyou:build${{steps.current.outputs.formattedTime}}
